--- a/style.css
+++ b/style.css
@@ -48,49 +48,28 @@ body a {
 }
 /* NAVBAR */
 
-/* FOOTER */
+/* FOOTER */ 
 
-.footer {
-  width: 100%;
-  background-color: rgba(1, 1, 1, 0.80);
-  color: rgb(255, 255, 255);
+footer{
+  background-color: rgba(1, 1, 1, 0.8);
   font-size: 0.8rem;
   font-family: 'Indie Flower', cursive;
   letter-spacing: 3.5px;
 }
 
+.footer__txt, .footer__redes{
+  margin: 35px 0;
+}
 
-.copy_redes a img {
+.redes a img {
   width: 30px;
   height: 30px;
+  margin: 0 20px;
 }
 
-.copy_redes ul li {
-  list-style: none;
-  display: inline-block;
-  margin: 0 10px;
-  position: relative;
-}
-
-.copy_redes {
-  width: 80%;
-  margin: auto;
-  padding: 35px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.design a {
+.footer__txt a{
+  color: rgb(255, 255, 255);
   text-decoration: none;
-}
-
-.design {
-  margin: auto;
-  padding: 0 0 35px 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* FOOTER */
