--- a/style.css
+++ b/style.css
@@ -540,61 +540,12 @@ footer{
 
 /* NOSOTROS */
 
-/* PORTADA */
-.nosotros_portada {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 35px 0;
-
-
-}
-
-.nosotros_portada h1 {
+.nosotros_titulo {
   font-family: 'Indie Flower', cursive;
   font-size: 3rem;
   margin: 35px 0;
 
 }
-
-.nosotros_portada .nosotros_polaroid {
-  background-color: rgb(255, 255, 255);
-  padding: 15px 15px 40px 15px;
-  box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.4);
-}
-
-/* PORTADA */
-
-
-/* CONTENIDO */
-
-.nosotros_main {
-
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.nosotros img {
-  width: 100%;
-}
-
-.nosotros {
-  display: flex;
-  padding: 35px;
-  width: 80%;
-  align-items: center;
-  justify-content: center;
-}
-
-.nosotros_contenido {
-  flex: 50%;
-  padding: 35px;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
 
 .nosotros_polaroid {
   background-color: rgb(255, 255, 255);
@@ -603,6 +554,9 @@ footer{
   box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.4);
 }
 
+.nosotros_polaroid img{
+  width: 100%;
+}
 .nosotros_texto {
   box-shadow: 2px 2px 30px rgba(255, 255, 255, 0.3);
   background-color: rgba(1, 1, 1, 0.60);
@@ -614,8 +568,6 @@ footer{
   font-family: 'Indie Flower', cursive;
   padding: 15px;
 }
-
-/* CONTENIDO */
 
 /* NOSOTROS */
 
