--- a/style.css
+++ b/style.css
@@ -429,84 +429,21 @@ textarea{
 
 /* TITULO */
 
-.galeria {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-auto-rows: 450px;
-	padding: 30px;
-	gap: 30px;
+#galeria .col-lg-4 {
+  padding: 0 0 !important;
 }
 
-.galeria__img {
-	width:100%;
-	height: 100%;
-	object-fit: cover;
+#galeria img {
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
 }
 
-.galeria__item {
+.polaroid {
   background-color: rgb(255, 255, 255);
   padding: 15px 15px 40px 15px;
   box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.4);
-}
-
-.galeria__item:nth-child(4) {
-	grid-column-start: span 2;
-}
-
-.galeria__item:nth-child(5) {
-	grid-row-start: span 2;
-}
-
-.galeria__item:nth-child(9) {
-	grid-column-start: span 2;
-}
-
-@media (min-widht:768px) {
-	.galeria {
-		grid-template-columns:(4, 1fr);
-	}
-
-	.galeria__item:nth-child(3) {
-		grid-column-start: span 2;
-	}
-
-	.galeria__item:nth-child(4) {
-		grid-column-start: span 3;
-	}
-
-	.galeria__item:nth-child(5) {
-		grid-row-start: span 3;
-	}
-
-	.galeria__item:nth-child(9) {
-		grid-column-start: span 3 ;
-	}
-}
-
-
-@media (min-widht:1024px) {
-	.galeria {
-		grid-template-columns:(5, 1fr);
-		width:80%;
-		margin: auto;
-	}
-
-	.galeria__item:nth-child(1) {
-		grid-column-start: span 2;
-		grid-row-start: span 2;
-	}
-
-	.galeria__item:nth-child(4) {
-		grid-column-start: span 3;
-	}
-
-	.galeria__item:nth-child(5) {
-		grid-row-start: span 3;
-	}
-
-	.galeria__item:nth-child(9) {
-		grid-column-start: span 3 ;
-	}
+  margin: 15px;
 }
 
 /* GALERIA */
