--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -1,6 +1,20 @@
  /* HOME*/
  /* INFO */
 
+.promociones{
+    .carousel{
+        .carousel-inner{
+            .carousel-item{
+                .home_promos_contenedor_img{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+
+
  .home_info {
      margin: 35px 0;
 
@@ -36,21 +50,13 @@
  .preguntas {
      margin: 35px auto;
      .accordion-item{
-        margin: 5px 0;
-        background-color: rgba(1, 1, 1, 0.6);
-        border: none;
-        color: rgb(255, 255, 255);
+        @extend %accordion;
         .accordion-button{
-            margin: 5px 0;
-            background-color: rgba(1, 1, 1, 0.6);
-            border: none;
-            color: rgb(255, 255, 255);
+            @extend %accordion;
+            letter-spacing: 2px;
         }
         .accordion-button:not(.collapsed){
-            margin: 5px 0;
-            background-color: rgba(1, 1, 1, 0.6);
-            border: none;
-            color: rgb(255, 255, 255);
+            @extend %accordion;
         }
      }
  }
