--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -79,12 +79,16 @@
  /* MENSAJE */
 
  .home_mensaje{
-    p{
-        font-size: 1.5rem;
-        margin: 15px 0;
-        a{
-            text-decoration: none !important;
-            font-weight: 700;
+    .home_mensaje_row{
+        .home_texto{
+            p{
+                font-size: 1.5rem;
+                margin: 15px 0;
+                a{
+                    text-decoration: none !important;
+                    font-weight: 700;
+                }
+            }
         }
     }
  }
