--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -1,29 +1,30 @@
  /* HOME*/
  /* INFO */
 
-.promociones{
-    @media screen and (max-width:450px) {
-        display: none;
-    }
+ .promociones {
+     @media screen and (max-width:450px) {
+         display: none;
+     }
 
-    .carousel{
-        .carousel-inner{
-            .carousel-item{
-                .home_promos_contenedor_img{
-                    width: 100%;
-                }
-            }
-        }
-    }
-}
+     .carousel {
+         .carousel-inner {
+             .carousel-item {
+                 .home_promos_contenedor_img {
+                     width: 100%;
+                 }
+             }
+         }
+     }
+ }
 
 
-.promociones-mobile{
-    display: none;
-    @media screen and (max-width:450px) {
-        display: flex;
-    }
-}
+ .promociones-mobile {
+     display: none;
+
+     @media screen and (max-width:450px) {
+         display: flex;
+     }
+ }
 
 
 
@@ -46,12 +47,12 @@
  /* CATEGORIAS */
 
  .categorias {
-     .row {
-         .categorias__carousel {
-             display: flex;
-             margin: 35px auto;
-         }
+     .categorias__carousel {
+         display: flex;
+         margin: 35px auto;
+         padding: 15px 15px 15px 15px;
      }
+
  }
 
  /* CATEGORIAS */
@@ -61,36 +62,40 @@
 
  .preguntas {
      margin: 35px auto;
-     .accordion-item{
-        @extend %accordion;
-        .accordion-button{
-            @extend %accordion;
-            letter-spacing: 2px;
-        }
-        .accordion-button:not(.collapsed){
-            @extend %accordion;
-        }
+
+     .accordion-item {
+         @extend %accordion;
+
+         .accordion-button {
+             @extend %accordion;
+             letter-spacing: 2px;
+         }
+
+         .accordion-button:not(.collapsed) {
+             @extend %accordion;
+         }
      }
  }
 
- 
+
  /* PREGUNTAS */
 
  /* MENSAJE */
 
- .home_mensaje{
-    .home_mensaje_row{
-        .home_texto{
-            p{
-                font-size: 1.5rem;
-                margin: 15px 0;
-                a{
-                    text-decoration: none !important;
-                    font-weight: 700;
-                }
-            }
-        }
-    }
+ .home_mensaje {
+     .home_mensaje_row {
+         .home_texto {
+             p {
+                 font-size: 1.5rem;
+                 margin: 15px 0;
+
+                 a {
+                     text-decoration: none !important;
+                     font-weight: 700;
+                 }
+             }
+         }
+     }
  }
 
  /* MENSAJE */
