--- a/scss/components/_nosotros.scss
+++ b/scss/components/_nosotros.scss
@@ -2,6 +2,11 @@
 /* NOSOTROS */
 
 .nosotros{
+    .nosotros_portada{
+        @media screen and (max-width:450px) {
+            display: none;
+        }
+    }
     .nosotros_titulo{
         font-size: 3rem;
         margin: 35px 0;
